src/objects/Procurement_Activity__c.object
<CustomObject>
    <description>Tracking for single or multi-phase procurements on opportunities</description>
    <fields>
        <fullName>Assignments_Due_Date__c</fullName>
        <label>Assignments Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backup_Proposal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backup Proposal Manager</description>
        <label>Backup Proposal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procurement_Activities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Amount__c</fullName>
        <label>Bid Bond Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Issued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Issued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Percentage__c</fullName>
        <label>Bid Bond Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Bond_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bid Bond Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bidder_s_Conference_Date__c</fullName>
        <label>Bidder&apos;s Conference Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bidder_s_Conference_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bidder&apos;s Conference Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <formula>IF( ispickval(Opportunity__r.StageName,&apos;Closed Won&apos;), Opportunity__r.CloseDate,
if( ispickval(Opportunity__r.StageName,&apos;Closed Lost&apos;), Opportunity__r.CloseDate,
if( ispickval(Opportunity__r.StageName,&apos;Closed Lost - Other&apos;), Opportunity__r.CloseDate,
if(  ispickval(Opportunity__r.StageName,&apos;Closed Lost - No Bid&apos;), Opportunity__r.CloseDate,NULL ))))</formula>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Common_Partners__c</fullName>
        <inlineHelpText>Businesses/People with pre-existing relationships with the current prospect</inlineHelpText>
        <label>Common Partners</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conference_Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who represented TTS at conference</inlineHelpText>
        <label>Conference Attendee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procurement_Activities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <description>If Consultant is known, please select here</description>
        <label>Consultant</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DELATWRX</fullName>
                </value>
                <value>
                    <fullName>Winbourne</fullName>
                </value>
                <value>
                    <fullName>Mission Critical</fullName>
                </value>
                <value>
                    <fullName>L.R. Kimball</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Vendor_Questions__c</fullName>
        <label>Deadline for Vendor Questions</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Granted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Respondent_CAD_Mobile_911__c</fullName>
        <label>Functional Respondent - CAD/Mobile/911</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Liz Byers</fullName>
                </value>
                <value>
                    <fullName>Rebecca Webb</fullName>
                </value>
                <value>
                    <fullName>William Gray</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Functional_Respondent_RMS_FBR_Jail_IQ__c</fullName>
        <label>Functional Respondent - RMS/FBR/JAIL/IQ</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>David Amaya</fullName>
                </value>
                <value>
                    <fullName>Karen Southerland</fullName>
                </value>
                <value>
                    <fullName>TC Thomas</fullName>
                </value>
                <value>
                    <fullName>Matt Klein</fullName>
                </value>
                <value>
                    <fullName>Quintus Hampton</fullName>
                </value>
                <value>
                    <fullName>Steve Angell</fullName>
                    <isActive>false</isActive>
                    <label>Steve Angell</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Green_Team_Date__c</fullName>
        <label>Green Team Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>If_Consultant_Other__c</fullName>
        <description>If the consultant being used was not listed above, please enter here.</description>
        <label>If Consultant &quot;Other&quot;</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Definition_Review_Date__c</fullName>
        <label>Implementation Definition Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_RFx_Location__c</fullName>
        <label>Internal RFx Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_of_Intent_Due_Date__c</fullName>
        <label>Letter of Intent Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Letter_of_Intent_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Letter of Intent Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Bid_Letter_Due_Date__c</fullName>
        <label>No Bid Letter Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>No_Bid_Letter_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Bid Letter Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Electronic_Copies_Required__c</fullName>
        <label>Number of Electronic Copies Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Hard_Copies_Required__c</fullName>
        <label>Number of Hard Copies Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Procurement Activities</relationshipLabel>
        <relationshipName>Procurement_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Percentage__c</fullName>
        <label>Performance Bond Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Performance_Bond_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Bond Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pre_Green_Team_Meeting__c</fullName>
        <label>Pre-Green Team Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procurement_Activities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procurement_Type__c</fullName>
        <label>Procurement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>RFQ</fullName>
                </value>
                <value>
                    <fullName>RFP</fullName>
                </value>
                <value>
                    <fullName>Proposal Follow-up</fullName>
                </value>
                <value>
                    <fullName>BAFO</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                    <isActive>false</isActive>
                    <label>GSA</label>
                </value>
                <value>
                    <fullName>Sole-Source</fullName>
                    <isActive>false</isActive>
                    <label>Sole-Source</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Size__c</fullName>
        <description>This helps the procurement team understand and track projects by size</description>
        <inlineHelpText>5=high level of effort, 1= low level of effort</inlineHelpText>
        <label>Project Size</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier One</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>RIM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Procurement_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposal_Stage__c</fullName>
        <label>Proposal Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Solution Development</fullName>
                </value>
                <value>
                    <fullName>Quality Assurance</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>No Bid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Status__c</fullName>
        <label>Proposal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bid Review</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Shortlisted</fullName>
                </value>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Closed/Won</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
                <value>
                    <fullName>Closed/Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFx_Contact_Address__c</fullName>
        <label>RFx Contact Address</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFx_Contact_Email__c</fullName>
        <label>RFx Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RFx_Contact_Number__c</fullName>
        <label>RFx Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>RFx_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFx Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Procurement Activities</relationshipLabel>
        <relationshipName>Procurement_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Red_Team_Date__c</fullName>
        <label>Red Team Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Received__c</fullName>
        <label>Request Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Due_Date__c</fullName>
        <label>Response Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Response_Ship_Date__c</fullName>
        <label>Response Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Submitted__c</fullName>
        <label>Response Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selected_Date__c</fullName>
        <formula>Opportunity__r.Selection_Date__c</formula>
        <label>Selected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shortlisted_Date__c</fullName>
        <formula>Opportunity__r.Shortlisted_Date__c</formula>
        <label>Shortlisted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solution_Definition_Review_Date__c</fullName>
        <label>Solution Definition Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Solutions_Architect__c</fullName>
        <label>Solutions Architect</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Darrell Richards</fullName>
                </value>
                <value>
                    <fullName>Del Pullen</fullName>
                </value>
                <value>
                    <fullName>Jeff Thau</fullName>
                </value>
                <value>
                    <fullName>Keith Singleton</fullName>
                </value>
                <value>
                    <fullName>Kurt Hallmeyer</fullName>
                </value>
                <value>
                    <fullName>Mark Catone</fullName>
                </value>
                <value>
                    <fullName>Matt Manzano</fullName>
                </value>
                <value>
                    <fullName>Noemi Aguiar</fullName>
                </value>
                <value>
                    <fullName>Scott Nemetz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Procurement Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <columns>Proposal_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GSA_Procurements</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procurement_Type__c</field>
            <operation>equals</operation>
            <value>GSA</value>
        </filters>
        <label>All GSA Procurements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RFI_Procurements</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procurement_Type__c</field>
            <operation>equals</operation>
            <value>RFI</value>
        </filters>
        <label>All RFI Procurements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RFP_Procurements</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procurement_Type__c</field>
            <operation>equals</operation>
            <value>RFP</value>
        </filters>
        <label>All RFP Procurements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RFQ_Procurements</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procurement_Type__c</field>
            <operation>equals</operation>
            <value>RFQ</value>
        </filters>
        <label>All RFQ Procurements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Sole_Source_Procurements</fullName>
        <columns>NAME</columns>
        <columns>Procurement_Type__c</columns>
        <columns>Request_Received__c</columns>
        <columns>Response_Due_Date__c</columns>
        <columns>Response_Ship_Date__c</columns>
        <columns>Response_Submitted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Procurement_Type__c</field>
            <operation>equals</operation>
            <value>Sole-Source</value>
        </filters>
        <label>All Sole-Source Procurements</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Procurement Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Procurement Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>